--- a/css/components.css
+++ b/css/components.css
@@ -1,4 +1,4 @@
-@import url("../components/card/card.css");
-@import url("../components/card-product/cardProduct.css");
-@import url("../components/navigation-bottom/navigationBottom.css");
-@import url("../components/rating/rating.css");
+@import url("https://dashui.netlify.app/components/card/Card.css");
+@import url("https://dashui.netlify.app/components/card-product/cardProduct.css");
+@import url("https://dashui.netlify.app/components/navigation-bottom/navigationBottom.css");
+@import url("https://dashui.netlify.app/components/rating/rating.css");
